feat: Formations Actualites Experience tabs + images + links

--- a/ABM.Paie/Layout/MainFooter.razor
+++ b/ABM.Paie/Layout/MainFooter.razor
@@ -1,6 +1,6 @@
 ﻿<div class="d-flex flex-wrap justify-center" style="padding:20px 0px;max-width:1000px;">
 	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/">
 			<MudText Typo="Typo.h5">
 				<b>Accueil</b>
 			</MudText>
@@ -8,26 +8,26 @@
 
 		<br />
 
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="margin:40px 0px 0px 0px;">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Formations" Style="margin:40px 0px 0px 0px;">
 			<MudText Typo="Typo.h5">
 				<b>Formations</b>
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Formations/Catalogue" Style="padding:0px 8px">
 			<MudText>
-				Initiale
+				Catalogue en ligne
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Formations/Perfectionnement" Style="padding:0px 8px">
 			<MudText>
-				Perfectionnements
+				Perfectionnement
 			</MudText>
 		</MudButton>
 	</div>
 	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Actualites">
 			<MudText Typo="Typo.h5">
 				<b>Actualités</b>
 			</MudText>
@@ -78,25 +78,25 @@
 		</MudButton>
 	</div>
 	<div style="padding:20px;width:400px;">
-		<MudButton Class="white-text" Variant="Variant.Text" Href="">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Experience">
 			<MudText Typo="Typo.h5">
 				<b>Expérience</b>
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Experience/Silae" Style="padding:0px 8px">
 			<MudText>
 				Salariée Silae
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Experience/Chiffres" Style="padding:0px 8px">
 			<MudText>
 				Formatrice Silae en chiffres
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/Experience/Cafel" Style="padding:0px 8px">
 			<MudText>
 				Étudiante Cafel
 			</MudText>
@@ -135,13 +135,13 @@
 		<div class="d-flex align-center">
 			<MudIcon Icon="@Icons.Material.TwoTone.Phone" Title="Phone" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
 			<MudIcon Icon="@Icons.Material.TwoTone.Textsms" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
-			<img src="/images/whatsapp/Digital_Glyph_White.png" alt="WhatsApp" height="18" style="margin:0px 0px 0px 6.5px;" />
+			<img src="/images/whatsapp/Digital_Glyph_White.png" alt="WhatsApp" height="18" style="margin:0px 0px 0px 7px;" />
 			<MudText Class="white-text" Style="margin:0px 0px 0px 8px;">
 				+33 7 48 10 65 39
 			</MudText>
 		</div>
 		<div class="d-flex align-center" style="margin:10px 0px 0px 0px;">
-			<a href="/Contact/Pages" target="_blank"><img src="/images/linkedin/LI-Logo.png" alt="LinkedIn" height="20" style="margin:8px;" /></a>
+			<a href="https://www.linkedin.com/in/abm-paie-1b551a336" target="_blank"><img src="/images/linkedin/LI-Logo.png" alt="LinkedIn" height="20" style="margin:8px;" /></a>
 		</div>
 	</div>
 </div>
