--- a/ABM.Paie/Layout/MainLayout.razor
+++ b/ABM.Paie/Layout/MainLayout.razor
@@ -6,6 +6,7 @@
 
 <MudContainer>
 	<div class="center" style="text-align:center;margin-top:20px;">
+		<img src="/images/ABMq_Paie_Logo.png" alt="logo ABM Paie" width="100"/>
 		<MainHeader />
 	</div>
 
