--- a/ABM.Paie/Pages/Contact.razor
+++ b/ABM.Paie/Pages/Contact.razor
@@ -32,10 +32,14 @@
 <div style="text-align:justify;margin-bottom:20px;">
     <div style="margin:20px 0px;">
         <div class="d-flex flex-wrap align-top">
-            <MudText Class="indigo-text" Typo="Typo.h6">
-                Réserver un créneau horaire
-			</MudText>
-			<a href="/Contact/Rdv"><MudIcon Class="indigo-text text-lighten-2" Icon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:5px 0px 0px 5px;" /></a>
+			<a href="/Contact/Rdv">
+				<MudText Class="indigo-text" Typo="Typo.h6">
+					Réserver un créneau horaire
+				</MudText>
+			</a>
+            <a href="/Contact/Rdv">
+                <MudIcon Class="indigo-text text-lighten-2" Icon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:5px 0px 0px 5px;" />
+            </a>
         </div>
 
         <MudText style="margin:10px 0px;">
@@ -43,10 +47,14 @@
         </MudText>
 
         <div class="d-flex flex-wrap align-top">
-            <MudText Class="indigo-text" Typo="Typo.h6">
-                Contact direct
-            </MudText>
-            <a href="/Contact/Coordonnees"><MudIcon Class="indigo-text text-lighten-2" Icon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:5px 0px 0px 5px;" /></a>
+			<a href="/Contact/Coordonnees">
+				<MudText Class="indigo-text" Typo="Typo.h6">
+					Contact direct
+				</MudText>
+			</a>
+			<a href="/Contact/Coordonnees">
+                <MudIcon Class="indigo-text text-lighten-2" Icon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:5px 0px 0px 5px;" />
+            </a>
         </div>
 
         <MudText Style="margin:10px 0px;">
@@ -57,7 +65,7 @@
             <MudText>
                 le nom de l'entreprise,
                 <br />
-                la personne à contacter
+                la personne à contacter,
                 <br />
                 le numéro de téléphone,
                 <br />
@@ -92,7 +100,7 @@
             <ChildContent>
                 <div class="d-flex justify-space-around flex-wrap" style="margin-top:20px;">
                     <div>
-                        <MudList T="string">
+                        <MudList Class="pointer-events-none" T="string">
                             <MudListSubheader>
                                 <MudText Typo="Typo.h6">Par téléphone : +33 7 48 10 65 39</MudText>
                             </MudListSubheader>
@@ -140,7 +148,7 @@
                     <MudText Typo="Typo.h6">
 				    	Mon réseau professionnel :
 					</MudText>
-                    <a href="/" target="_blank" style="margin:5px 0px 0px 8px;"><img src="/images/linkedin/LI-Logo.png" alt="LinkedIn" height="22" /></a>
+                    <a href="https://www.linkedin.com/in/abm-paie-1b551a336" target="_blank" style="margin:5px 0px 0px 8px;"><img src="/images/linkedin/LI-Logo.png" alt="LinkedIn" height="22" /></a>
                 </div>
             </ChildContent>
         </MudExpansionPanel>
